[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/memtable",
    "crates/storage",
    "crates/compaction",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["The AeroLSM Contributors"]
repository = "https://github.com/aerolsm/aerolsm"
homepage = "https://github.com/aerolsm/aerolsm"
keywords = ["lsm", "database", "storage-engine", "async", "lock-free"]
categories = ["database-implementations", "concurrency", "data-structures"]

# Internal crates are referenced through the workspace so versions stay in lockstep.
[workspace.dependencies]
aerolsm-core = { version = "0.1.0", path = "crates/core" }
aerolsm-memtable = { version = "0.1.0", path = "crates/memtable" }
aerolsm-storage = { version = "0.1.0", path = "crates/storage" }
aerolsm-compaction = { version = "0.1.0", path = "crates/compaction" }

# Test/example-only dependencies. The runtime is intentionally kept out of the
# library crates so AeroLSM stays runtime-agnostic (see CONTRIBUTING.md).
tokio = { version = "1", default-features = false }

# Shared lint policy. Every crate opts in with `[lints] workspace = true`.
# `missing_docs = deny` enforces the project's pristine-documentation rule.
[workspace.lints.rust]
missing_docs = "deny"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# Faster, still-debuggable test builds for the concurrency stress suites.
[profile.test]
opt-level = 2
