[package]
name = "aerolsm-core"
description = "Core traits and types for AeroLSM: the async, zero-copy, pluggable LSM engine."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

# The core crate is intentionally dependency-free and runtime-agnostic.
# It must compile without Tokio, async-std, or any I/O runtime.
[dependencies]

[lints]
workspace = true
