[package]
name = "aerolsm-memtable"
description = "The default lock-free skiplist MemTable for AeroLSM."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
aerolsm-core = { workspace = true }

# The runtime is a *test/example* concern only; the library itself is
# runtime-agnostic and depends on nothing but `aerolsm-core` and `std`.
[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }

[lints]
workspace = true
